--- a/2025/_includes/footer.html
+++ b/2025/_includes/footer.html
@@ -1,5 +1,14 @@
 <footer class="footer">
-    <img src="assets\img\Footer.png" alt="Footer Background" />
+    <img src="assets/img/footer/footer-1920.jpg" srcset="
+                 assets/img/footer/footer-3840.jpg 3840w,
+                 assets/img/footer/footer-2560.jpg 2560w,
+                 assets/img/footer/footer-1920.jpg 1920w,
+                 assets/img/footer/footer-1280.jpg 1280w,
+                 assets/img/footer/footer-640.jpg 640w
+               " sizes="(max-width: 640px) 100vw,
+                      (max-width: 1280px) 100vw,
+                      (max-width: 1920px) 100vw,
+                      100vw" alt="Footer Background" />
     <div class="footer-content">
         IEEE ISMAR 2025 | Daejeon, South Korea | October 2025
     </div>
