--- a/2025/main.css
+++ b/2025/main.css
@@ -513,3 +513,73 @@ table tbody tr:nth-child(even) {
         max-width: 100%; /* Ensures image doesn't overflow */
     }
 }
+
+
+
+
+/* Call for Papers */
+h1, h2 {
+    font-weight: bold;
+    color: #1e1e1e;
+}
+.cfp-container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+.cfp-header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.cfp-header h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: rgb(37, 37, 197);
+    font-family: 'Poppins', sans-serif;
+}
+.cfp-content {
+    background-color: #fff;
+    padding: 40px;
+    border-radius: 8px;
+}
+.section {
+    margin-bottom: 30px;
+}
+.section h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    color: rgb(37, 37, 197);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+}
+.section h3 {
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: rgb(37, 37, 197);
+    font-family: 'Poppins', sans-serif;
+}
+.section p {
+    font-size: 16px;
+    line-height: 1.6;
+    font-family: 'Poppins', sans-serif;
+}
+@media (max-width: 768px) {
+    .cfp-container {
+        width: 95%;
+        padding: 15px;
+    }
+    .cfp-header h1 {
+        font-size: 28px;
+    }
+    .cfp-content {
+        padding: 20px;
+    }
+    .section h2 {
+        font-size: 20px;
+    }
+    .section p {
+        font-size: 14px;
+    }
+}
