--- a/2025/main.css
+++ b/2025/main.css
@@ -297,7 +297,7 @@ h2 {
     font-weight: 600;
 }
 
-.page-content h3
+.page-content h3 {
     font-size: 20px;
     margin-top: 20px;
     margin-bottom: 10px;
