--- a/assets/2025/css/main.css
+++ b/assets/2025/css/main.css
@@ -298,10 +298,18 @@ h2 {
 }
 
 .page-content h3 {
-    font-size: 20px;
+    font-size: 21px;
     margin-top: 20px;
     margin-bottom: 10px;
     color: rgb(37, 37, 197);
+    font-family: "Poppins", sans-serif;
+}
+
+.page-content h4 {
+    font-size: 18px;
+    margin-top: 18px;
+    margin-bottom: 8px;
+    color: #1e1e1e;
     font-family: "Poppins", sans-serif;
 }
 
