Add Associate Program Chairs and fix styling issues on committee page

--- a/assets/2025/css/main.css
+++ b/assets/2025/css/main.css
@@ -75,6 +75,9 @@ body {
     flex-direction: column; /* Stacks the content vertically */
     justify-content: center; /* Vertically centers content within the container */
     align-items: center; /* Horizontally centers content within the container */
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .organizers-container h2 {
@@ -93,7 +96,7 @@ body {
     display: flex;
     justify-content: flex-start; /* Align items to the left */
     align-items: flex-start; /* Align items to the top */
-    gap: 50px; /* Space between each item */
+    gap: 0 50px; /* Space between each item */
     flex-wrap: wrap; /* Allows items to wrap if screen size is small */
     padding-left: 20px; /* Optional: adds some padding to the left side */
 }
@@ -154,22 +157,14 @@ body {
 /* For smaller screens (e.g., tablets or small devices) */
 @media (max-width: 768px) {
     .chairs {
-        gap: 0; /* Removes space between items on smaller devices */
-    }
-
-    .chair {
-        flex-basis: 50%; /* Keeps 2 items per row */
+        gap: 0 20px; /* Reduces space between items */
     }
 }
 
 /* For very small screens (e.g., mobile devices) */
 @media (max-width: 480px) {
     .chairs {
-        gap: 0; /* Removes space between items on smaller devices */
-    }
-
-    .chair {
-        flex-basis: 50%; /* Keeps 2 items per row */
+        gap: 0 20px; /* Reduces space between items */
     }
 }
 
