--- a/assets/2025/css/styles.css
+++ b/assets/2025/css/styles.css
@@ -117,6 +117,9 @@ nav ul li {
     min-width: 250px; /* Increase width to fit longer subpage titles */
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
     list-style: none; /* Remove bullet points in the dropdown */
     padding: 0; /* Remove padding */
     margin: 0; /* Remove margin */
@@ -150,11 +153,20 @@ nav ul li {
 /* Show dropdown on hover */
 .dropdown:hover .dropdown-content {
     display: block;
+    opacity: 1;
+    visibility: visible;
 }
+
+.dropdown-content {
+    pointer-events: none;
+    transition-delay: 0.1s;
+  }
+
 
 /* Hide nested dropdown by default */
 .dropdown .dropdown-content li .dropdown-content {
-    display: none; 
+    display: none;
+    transition-delay: 0s;
 }
 
 /* Show nested dropdown on hover */
