--- a/assets/2025/css/styles.css
+++ b/assets/2025/css/styles.css
@@ -1074,3 +1074,9 @@ html, body {
     }
 }
 
+/* Style for passed deadlines */
+.passed-deadline {
+    text-decoration: line-through;
+    opacity: 0.7;
+    color: #999 !important;
+}
