--- a/assets/2025/css/main.css
+++ b/assets/2025/css/main.css
@@ -331,6 +331,16 @@ h2 {
     margin-bottom: 20px;
 }
 
+.post-right-float-img {
+    width: 35%;
+    max-width: 400px;
+    min-width: 280px;
+    height: auto;
+    float: right;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
 .exhibitor-info {
     font-family: "Poppins", sans-serif;
     color: #333;
@@ -520,6 +530,24 @@ table tbody tr:nth-child(even) {
 
     .bar-chart-img {
         max-width: 100%; /* Ensures image doesn't overflow */
+    }
+
+    .post-right-float-img {
+        float: none;
+        display: block;
+        width: 50%;
+        min-width: 280px;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 320px) {
+    .post-right-float-img {
+        width: 100%;
+        min-width: 0;
     }
 }
 
